; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libopusdec.c_libopus_flush.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libopusdec.c_libopus_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__*, %struct.libopus_context* }
%struct.TYPE_4__ = type { i32 }
%struct.libopus_context = type { i32, i32 }

@OPUS_RESET_STATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @libopus_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @libopus_flush(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.libopus_context*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 1
  %6 = load %struct.libopus_context*, %struct.libopus_context** %5, align 8
  store %struct.libopus_context* %6, %struct.libopus_context** %3, align 8
  %7 = load %struct.libopus_context*, %struct.libopus_context** %3, align 8
  %8 = getelementptr inbounds %struct.libopus_context, %struct.libopus_context* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @OPUS_RESET_STATE, align 4
  %11 = call i32 @opus_multistream_decoder_ctl(i32 %9, i32 %10)
  %12 = load %struct.libopus_context*, %struct.libopus_context** %3, align 8
  %13 = getelementptr inbounds %struct.libopus_context, %struct.libopus_context* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  store i32 %14, i32* %18, align 4
  ret void
}

declare dso_local i32 @opus_multistream_decoder_ctl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
